feat: 增加 linker 板块
Signed-off-by: YdrMaster <ydrml@hotmail.com>

--- a/ch4/Cargo.toml
+++ b/ch4/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
 name = "ch4"
-version = "0.1.0"
+version = "0.0.0"
 edition = "2021"
+authors = ["YdrMaster <ydrml@hotmail.com>"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+[build-dependencies]
+linker = { path = "../linker" }
