--- a/ch1/Cargo.toml
+++ b/ch1/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "ch1"
-version = "0.1.0"
+version = "0.0.0"
 edition = "2021"
+authors = ["YdrMaster <ydrml@hotmail.com>"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
