--- a/ch2/Cargo.toml
+++ b/ch2/Cargo.toml
@@ -1,8 +1,13 @@
 [package]
 name = "ch2"
-version = "0.1.0"
+version = "0.0.0"
 edition = "2021"
+authors = ["YdrMaster <ydrml@hotmail.com>"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rcore-console = "0.0.0"
+
+[build-dependencies]
+linker = { path = "../linker" }
