--- a/linker/Cargo.toml
+++ b/linker/Cargo.toml
@@ -1,16 +1,12 @@
 [package]
-name = "xtask"
+name = "linker"
 version = "0.0.0"
 edition = "2021"
 authors = ["YdrMaster <ydrml@hotmail.com>"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
-clap = { version = "4.1", features = ["derive"] }
-os-xtask-utils = "0.0.0"
-once_cell = "1.17"
+[features]
+build_ = []
 
-serde = "1.0"
-serde_derive = "1.0"
-toml = "0.7"
+[dependencies]
