--- a/ch4/Cargo.toml
+++ b/ch4/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["YdrMaster <ydrml@hotmail.com>"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+linker = { path = "../linker" }
 
 [build-dependencies]
 linker = { path = "../linker" }
