feat(xtask): 增加一个 book 命令
Signed-off-by: YdrMaster <ydrml@hotmail.com>

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,6 @@
 [alias]
 xtask = "run --package xtask --release --"
+book = "xtask book"
 make = "xtask make"
 asm = "xtask asm"
 qemu = "xtask qemu"
