feat: 增加 machine-info 库
Signed-off-by: YdrMaster <ydrml@hotmail.com>

--- a/ch3/Cargo.toml
+++ b/ch3/Cargo.toml
@@ -9,6 +9,7 @@ authors = ["YdrMaster <ydrml@hotmail.com>"]
 [dependencies]
 sifive-test-device = "0.0.0"
 linker = { path = "../linker" }
+machine-info = { path = "../machine-info" }
 
 [build-dependencies]
 linker = { path = "../linker" }
