--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members = ["xtask", "ch*", "linker"]
+members = ["xtask", "ch*", "linker", "machine-info"]
 default-members = ["xtask"]
