--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -27,3 +27,6 @@ jobs:
           cargo make --ch 3
           cargo make --ch 4
           cargo make --ch 5
+          cargo make --ch 6
+          cargo make --ch 7
+          cargo make --ch 8
