--- a/ch4/Cargo.toml
+++ b/ch4/Cargo.toml
@@ -7,8 +7,11 @@ authors = ["YdrMaster <ydrml@hotmail.com>"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+sbi-spec = "0.0.4"
+rcore-console = "0.0.0"
 sifive-test-device = "0.0.0"
 linker = { path = "../linker" }
+machine-info = { path = "../machine-info" }
 
 [build-dependencies]
 linker = { path = "../linker" }
